attempt at adding identify card endpoint to GUI
